fix: remove duplicate EventHandler registration, surface async errors, harden HTTP clients
- [HIGH] Remove inline EventHandler registration from activate(); keep only
  registerEventHandler() called from start() to prevent every config event
  being processed twice (double reindex).
- [HIGH] produceAsynchronousOperations: attach .whenCompleteAsync() to the
  discarded CompletableFuture.allOf() so task exceptions are logged instead
  of silently swallowed.
- [MEDIUM] jahiaClient builder: add .followRedirects(false).followSslRedirects(false)
  so the Jahia session cookie is never forwarded to redirect destinations.
- [MEDIUM] initialized field: make volatile for safe cross-thread visibility.
- [MEDIUM] CustomGptIndexerNodeHandler.indexJahiaPage: add null-guard on
  jahiaResponse.body() before calling .string() to prevent NPE.
- [MEDIUM] deleteAllPages: create the batch ExecutorService once in purgeAllPages
  and pass it down, eliminating repeated thread-pool creation per round.
- [SONAR] Replace deprecated new URL(String) constructor with
  URI.create(s).toURL() in CustomGptIndexerNodeHandler and Utils (java:S1874).

Signed-off-by: Florent BOURASSE <fbourasse@jahia.com>